--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "axios": "^0.19.2",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "faker": "^4.1.0",
     "mysql": "^2.18.1",
+    "nodemon": "^2.0.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
   },
@@ -26,8 +28,9 @@
     "webpack-cli": "^3.3.12"
   },
   "scripts": {
-    "start": "nodemon server/index.js",
-    "react-dev": "webpack -d --watch"
+    "react-dev": "webpack -d --watch",
+    "server-dev": "nodemon server/index.js",
+    "db-setup": "node database/seed.js"
   },
   "repository": {
     "type": "git",
