--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "faker": "^4.1.0",
+    "moment": "^2.27.0",
     "mysql": "^2.18.1",
     "nodemon": "^2.0.4",
     "react": "^16.13.1",
