--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
   "scripts": {
     "react-dev": "webpack -d --watch",
     "server-dev": "nodemon server/index.js",
-    "db-setup": "node database/seed.js"
+    "seed": "node database/seed.js"
   },
   "repository": {
     "type": "git",
