--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "moment": "^2.27.0",
     "mysql": "^2.18.1",
     "nodemon": "^2.0.4",
+    "objects-to-csv": "^1.3.6",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
   },
