--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "nodemon": "^2.0.4",
     "objects-to-csv": "^1.3.6",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "styled-components": "^5.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.10.2",
