--- a/package.json
+++ b/package.json
@@ -41,8 +41,8 @@
     "webpack-dev-server": "^3.11.0"
   },
   "scripts": {
-    "react-dev": "webpack -d --watch",
-    "server-dev": "nodemon server/index.js",
+    "build": "webpack -d --watch",
+    "start": "nodemon server/index.js",
     "seed": "node database/seed.js",
     "start:dev": "webpack-dev-server --open",
     "test": "jest"
@@ -52,7 +52,9 @@
     "url": "git+https://github.com/rebeccaquey/CheckoutMenu.git"
   },
   "jest": {
-    "setupFilesAfterEnv": ["jest-enzyme"],
+    "setupFilesAfterEnv": [
+      "jest-enzyme"
+    ],
     "testEnvironment": "enzyme"
   },
   "keywords": [],
